--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="linuxDash">
     <head>
-        <title>linux-dash : Server Monitoring Web Dashboard</title>
+        <title>Prod monitoring</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Monitor your Linux server through a simple web dashboard. Open source and free!">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -20,15 +19,7 @@
           <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
     </head>
-    <body>
-        
-        <div class="hero">
-            <h4 class="title">Linux Dash</h4>
-            <small>A simple linux dashboard</small>
-            <theme-switcher></theme-switcher>
-            <nav-bar></nav-bar>
-        </div>
-        
+    <body>        
         <!-- Templates Get Rendered Here -->
         <div 
             id="plugins"  
