Just few changes to make it eatable

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <![endif]-->
     </head>
     <body>        
+	<h3 style="text-align: center;color: #FFF;">НАГРУЗКА НА СЕРВЕР</h3>
         <!-- Templates Get Rendered Here -->
         <div 
             id="plugins"  
